# schellma

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  Roadmap.md  demo_complete_roadmap.py  demo_roadmap_features.py  mkdocs.yml  mypy.ini  pyproject.toml
.github/instructions/: project.instructions.md
.github/workflows/: publish.yaml
docs/: .nav.yml  demo.md  index.md
src/bestou/: __init__.py
src/schellma/: __init__.py  __main__.py  constants.py  converters.py  demo_features.py  examples.py  exceptions.py  logging.py  models.py
tests/: _examples.py  test_advanced_arrays.py  test_advanced_unions.py  test_comprehensive_coverage.py  test_constants.py  test_constraints.py  test_default_values.py  test_error_handling.py  test_examples.py  test_indentation.py  test_logging.py  test_module_structure.py  test_nested_indentation.py  test_refactored_functions.py  test_required_optional.py  test_type_adapter.py  test_type_annotations.py  test_uniontype.py
